White space fix

--- a/wordpress/build-files/scss/_interior-box-text-top.scss
+++ b/wordpress/build-files/scss/_interior-box-text-top.scss
@@ -40,6 +40,10 @@
 	padding: 30px 0;
 }
 
+.page-template-customers .box-text-top.container-normal.pink-ball {
+	padding: 120px 0 39px 0;
+}
+
 .container-normal {
 	.container {
 		max-width: 1330px;
